# mathakine

./: .coveragerc  .dockerignore  .env.example  .flake8  .gitattributes  .gitignore  .impeccable.md  .test_user_hash  AGENTS.md  ANALYSE_ARCHITECTURE_COOKIES.md  ANALYSE_COMPLETE_MATHAKINE.md  APPLY_MIGRATION_EMAIL_VERIFICATION.md  ARCHITECTURE_AMÉLIORÉE.md  AUDIT_INTERFACE_GRAPHIQUE.md  CHANGELOG.md  CLAUDE.md  COMMIT_MESSAGE.md  CORRECTIONS_AFFICHAGE_DEDUCTION_RIDDLE.md  CORRECTIONS_AUTH_DASHBOARD.md  CORRECTIONS_CHALLENGES_TYPE_DISPLAY.md  CORRECTIONS_DASHBOARD_DATES.md  CORRECTIONS_DEPLOIEMENT_SUMMARY.md  CORRECTIONS_FINALES_TYPESCRIPT.md  CORRECTIONS_INTERFACE_GLOBAL.md  CORRECTION_FORGOT_PASSWORD.md  DEPLOY_RENDER_GUIDE.md  Dockerfile  GETTING_STARTED.md  GUIDE_VERIFICATION_EMAIL.md  Initialize-Database.ps1  LICENSE  Makefile  NOUVEAUX_TYPES_EXERCICES.md  OPTIMISATIONS_ERGONOMIQUES_V3.md  PLAN_ACTION_CORRECTIONS.md  Procfile  QUICK_START_RENDER.md  RAPPORT_FINAL_INTERFACE.md  RAPPORT_FINAL_INTERFACE_V2.md  README.md  (+74 more)
.claude/: session-plan.md
.cursor/plans/: b1_transactions_backend_4b238fed.plan.md
.cursor/rules/: Architecture-backend-r-gle-non-n-gociable.mdc  Documentation.mdc  Frontend-EdTech.mdc  Frontend-card-height-grid.mdc  Gestion-des-erreurs-et-fallbacks.mdc  Git-et-scope-des-commits.mdc  Principes-g-n-raux.mdc  R-gle-de-compte-rendu.mdc  R-gle-v-rit.mdc  R-utiliser-l-existant-avant-d-crire-du-nouveau.mdc  Refactoring-nouvelles-pratiques-obligatoires.mdc  S-paration-hook.mdc  Tests.mdc  Troubleshooting-et-verite-runtime.mdc  Validation-avant-commit-push.mdc  Versioning.mdc  contexte-avant-intervention.mdc  documentation-apres-intervention.mdc  reutiliser-utilitaires-existants.mdc  tests-apres-intervention.mdc  tests-systematiques.mdc  versioning-changelog.mdc
.githooks/: post-merge  pre-commit
.github/: copilot-instructions.md  dependabot.yml
.github/workflows/: ci.yml  tests.yml
_ARCHIVE_2026/: FASTAPI_ARCHIVE_NOTE.md
_ARCHIVE_2026/app/: main.py
_ARCHIVE_2026/root/: output.txt  package-lock.json  sample.env  schema_export_20260130_153410.sql  start-frontend.bat  (+2 more)
app/: exceptions.py  main.py
archives/: check_schema.py  check_server.py  db_schema.json  enhanced_serverold.py  fix_user_stats.py  start_ui.bat  temp_line.txt
docs/: ALEMBIC_SÉCURITÉ.md  ARCHITECTURE.md  ARCHIVE_NOTICE.md  AUDITS_CONSOLIDATED.md  AUDIT_COMPLETUDE_DOCUMENTATION.md  BETA_GUIDE.md  CASCADE_DELETION.md  CHANGELOG.md  CHATBOT_OPTIMIZATION.md  CHATBOT_OPTIMIZATIONS.md  CLEANUP_FRONTEND_REFONTE_SUMMARY.md  CONSOLIDATION_RESULTS.md  CONTEXT.md  CONVENTION_DOCUMENTATION.md  CORRECTIONS_ET_MAINTENANCE.md  CORRECTIONS_HISTORIQUES.md  DASHBOARD_FIX_REPORT.md  DEPLOYMENT_GUIDE.md  ENUMS_FIXES.md  ENUM_USAGE_EXAMPLES.md  ENV_CHECK.md  FICHIERS_NON_NECESSAIRES_PRODUCTION.md  FIXES.md  GLOSSARY.md  GUIDE_DEVELOPPEUR.md  HOMEPAGE_IMPROVEMENTS_SUMMARY.md  IMPLEMENTATION_PLAN.md  INDEX.md  LOGGING.md  MAINTENANCE.md  MAINTENANCE_ET_NETTOYAGE.md  MIGRATION_SUPPORT.md  Manuel-Technique-Mathakine-2026-04-13.docx  PAGES_MANQUANTES.md  POSTGRESQL_MIGRATION.md  POSTGRESQL_VS_SQLITE.md  PROJECT_STATUS.md  RAPPORT_FINAL_SESSION_20NOV2025.md  README.md  RENDER_CONFIGURATION_SUMMARY.md  (+12 more)
frontend/: .env.example  .gitignore  .prettierignore  README.md  TROUBLESHOOTING.md  eslint.config.mjs  hardcoded-texts-report.json  i18n.ts  instrumentation-client.ts  junit.xml  middleware.test.ts  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  proxy.ts  sentry.edge.config.ts  tailwind.config.js  tsconfig.json  vitest.config.ts  vitest.setup.ts
migrations/: env.py  recommendation_system.sql
presentations/: README.md
reports/: generation_calibration_baseline_pre_invitations_2026-04-20.json
scripts/: Config-Menu.ps1  Deploy-Mathakine.ps1  Initialize-Database.ps1  Launcher.ps1  README.md  Start-Dev-UI.ps1  Start-Direct.ps1  __init__.py  add_badges_recommandations.py  add_missing_enum_values.py  add_pinned_badges_to_test_db.py  add_test_data_v2.py  add_test_english_translations.py  add_test_english_translations_badges.py  add_visual_data_to_challenges.py  alembic_backup.py  alembic_demo.py  alembic_stamp.py  analyze_ai_challenges_quality.py  analyze_db_schema.py  analyze_test_cleanup.py  apply_enum_fix_safely.py  archive_docs.py  archive_sqlite.bat  audit_fix_challenges_db.py  audit_fix_exercises_db.py  backup_db.ps1  backup_db.py  check_auth_logout.py  check_challenge_2362.py  check_challenge_table_structure.py  check_column_defaults.py  check_compatibility.py  check_created_at.py  check_daily_results.py  check_db_enums.py  check_db_structure.py  check_enum_values.py  check_environment.bat  check_local_db.py  (+87 more)
server/: __init__.py  api_challenges.py  api_routes.py  app.py  auth.py  database.py  error_handlers.py  exercise_generator.py  exercise_generator_helpers.py  exercise_generator_validators.py  logic_challenge_fixed.py  middleware.py  routes.py  routes_backup.py  simple_views.py  template_handler.py  views.py
sources/: 0_lint.txt  1_frontend.txt  2_test.txt
static/: README.md  accessibility.css  breadcrumbs.css  fix-page-header.css  home-styles.css  notifications.css  space-theme-dark.css  space-theme.css  style.css  utils.css  variables.css
templates/: about.html  badges.html  base.html  challenges-hybrid.html  challenges.html  control-center.html  dashboard.html  error.html  exercise.html  exercise_detail.html  exercise_simple.html  exercises.html  forgot_password.html  home.html  home_new.html  logic-challenge.html  login.html  new_exercise.html  profile.html  register.html  settings.html  test-hybrid.html
tests/: CORRECTION_PLAN.md  DOCUMENTATION_TESTS.md  PLAN_TESTS_AMELIORATION.md  README.md  TEST_PLAN.md  api_check.py  auto_validation.py  compatibility_check.py  conftest.py  db_check.py  init_test_db.py  run_tests.bat  run_tests.py  setup_validation.bat  simple_validation.py  simplified_validation.py  test_config.yml  test_data_normalization.py  test_enum_adaptation.py  unified_test_runner.bat  unified_test_runner.py  validation_complete.bat
(+2110 files in other folders)
