[project]
name = "mathakine"
version = "2.1.0"
description = "Plateforme d'exercices et défis logiques gamifiée"
requires-python = ">=3.12"

[tool.black]
line-length = 88
target-version = ["py312"]
include = '\.pyi?$'
extend-exclude = '''
/(
  # default
  \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  # project
  | _ARCHIVE_2026
)/
'''

[tool.isort]
profile = "black"
line_length = 88

# Mypy 5.2 (audit) - démarrage progressif : passe en CI, durcissement ultérieur
[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true
# Permettre Optional implicite (def foo(x: str = None)) - à durcir plus tard
no_implicit_optional = false
# Désactiver temporairement les codes les plus bruyants (à réactiver module par module)
disable_error_code = [
    "no-any-return",
    "assignment",
    "arg-type",
    "return-value",
    "union-attr",
    "attr-defined",
    "var-annotated",
    "call-overload",
    "operator",
    "index",
]

# Modules critiques : réactiver no-any-return pour détecter retours Any incorrects
[[tool.mypy.overrides]]
module = ["app.db.adapter", "app.utils.error_handler", "app.exceptions"]
disable_error_code = [
    "assignment", "arg-type", "return-value", "union-attr", "attr-defined",
    "var-annotated", "call-overload", "operator", "index",
]

# B5.2 - Scope badge : durcissement progressif (no_implicit_optional, no-any-return)
[[tool.mypy.overrides]]
module = [
    "app.services.badges.badge_service",
    "app.services.badges.badge_application_service",
    "app.services.badges.badge_user_view_service",
    "app.services.badges.badge_progress_service",
    "app.services.badges.badge_rarity_service",
    "app.services.badges.badge_stats_cache",
    "app.services.badges.badge_award_persistence",
    "app.services.badges.badge_gamification_updates",
    "app.schemas.badge",
]
no_implicit_optional = true
check_untyped_defs = true
# Moins de relaxations que le projet : assignment réactivé pour Optional explicite
disable_error_code = [
    "arg-type", "return-value", "union-attr", "attr-defined",
    "var-annotated", "call-overload", "operator", "index",
]

# B5.3 - Scope auth : durcissement progressif (auth_session, auth_recovery)
[[tool.mypy.overrides]]
module = [
    "app.services.auth.auth_session_service",
    "app.services.auth.auth_recovery_service",
]
no_implicit_optional = true
check_untyped_defs = true
# Moins de relaxations que le projet : assignment réactivé pour Optional explicite
disable_error_code = [
    "arg-type", "return-value", "union-attr", "attr-defined",
    "var-annotated", "call-overload", "operator", "index",
]

# B5.4 - Scope exercise : durcissement progressif (generation, query)
[[tool.mypy.overrides]]
module = [
    "app.services.exercises.exercise_generation_service",
    "app.services.exercises.exercise_query_service",
]
no_implicit_optional = true
check_untyped_defs = true
# Moins de relaxations que le projet : assignment réactivé pour Optional explicite
disable_error_code = [
    "arg-type", "return-value", "union-attr", "attr-defined",
    "var-annotated", "call-overload", "operator", "index",
]

# B5.5 - Scope challenge : durcissement progressif (query, stream)
[[tool.mypy.overrides]]
module = [
    "app.services.challenges.challenge_query_service",
    "app.services.challenges.challenge_stream_service",
]
no_implicit_optional = true
check_untyped_defs = true
# Moins de relaxations que le projet : assignment réactivé pour Optional explicite
disable_error_code = [
    "arg-type", "return-value", "union-attr", "attr-defined",
    "var-annotated", "call-overload", "operator", "index",
]

# B5.6 - Small services : durcissement progressif (analytics, feedback, daily, diagnostic)
[[tool.mypy.overrides]]
module = [
    "app.services.analytics.analytics_service",
    "app.services.feedback.feedback_service",
    "app.services.progress.daily_challenge_service",
    "app.services.diagnostic.diagnostic_service",
]
no_implicit_optional = true
check_untyped_defs = true
disable_error_code = [
    "arg-type", "return-value", "union-attr", "attr-defined",
    "var-annotated", "call-overload", "operator", "index",
]
