[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = --cov=app --cov-report=term-missing -v

[coverage:run]
source = app
omit = */tests/*, */migrations/*, */examples/*, conftest.py

[pycodestyle]
max-line-length = 100
exclude = .git,__pycache__,dist,build,*.egg,venv,env,archive,archives 