[bdist_wheel]
universal = 1

[metadata]
license_file = LICENSE

[tool:pytest]
testpaths = tests
python_files = test_*.py
python_functions = test_*
addopts = --cov=app --cov-report=term-missing -v

[coverage:run]
source = app
omit = */tests/*, */migrations/*, */examples/*, conftest.py

[coverage:report]
exclude_lines =
    pragma: no cover
    def __repr__
    if self.debug:
    if settings.DEBUG
    raise NotImplementedError
    if __name__ == .__main__.:
    pass
    raise ImportError

[coverage:warnings]
ignore_errors = True
module_not_measured = True

[pycodestyle]
max-line-length = 100
exclude = .git,__pycache__,dist,build,*.egg,venv,env,archive,archives 